--- a/creating-vacancy.html
+++ b/creating-vacancy.html
@@ -15,28 +15,32 @@
         .main {
             display: flex;
             flex-direction: column;
-            align-items: center;
+            margin: 0 auto;
             padding: 20px;
+            max-width: 400px;
         }
 
         .offers__title {
             display: flex;
             flex-direction: column;
+            margin: 0 auto;
             gap: 5px;
         }
 
         .type-publication {
+            margin: 0 auto;
             height: 50px;
         }
 
         .emotion {
             position: relative;
-            font-size: 20px;
+            font-size: 14px;
 
             display: flex;
             opacity: 0;
             justify-content: center;
             align-items: center;
+            width: 100%;
             height: 50px;
             z-index: 2;
 
@@ -57,6 +61,10 @@
         }
 
         .link {
+            display: flex;
+            flex-direction: column;
+            margin: 0 auto;
+            gap: 5px;
             box-sizing: border-box;
 
             height: 50px;
