--- a/creating-vacancy.html
+++ b/creating-vacancy.html
@@ -48,6 +48,7 @@
             background: none;
             border-radius: 15px;
 
+            backdrop-filter: blur(5px);
             transition: all 0.3s ease-in;
         }
 
