--- a/creating-vacancy.html
+++ b/creating-vacancy.html
@@ -1,114 +1,339 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
-   <meta charset="UTF-8">
-   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Test Telegram WebApps API</title>
-   <script src="https://telegram.org/js/telegram-web-app.js"></script> <!--Подключаем скрипт от телеграм-->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title></title>
+    <script src="https://telegram.org/js/telegram-web-app.js"></script>
 
-   <style>
-      body{
-         color: var(--tg-theme-text-color);
-         background: var(--tg-theme-bg-color);
-         display: flex;
-         flex-direction: column;
-         align-items: center;
-         font-size: 18px;
-      }
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            min-width: 100%;
+            background-color: var(--tg-theme-bg-color);
+        }
 
-      .hint{
-         color: var(--tg-theme-hint-color);
-      }
+        .main {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            padding: 20px;
+        }
 
-      .link{
-         color: var(--tg-theme-link-color);
-      }
+        #offers {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            width: 100%;
+            gap: 5px;
+        }
 
-      .button{
-         background: var(--tg-theme-button-color);
-         color: var(--tg-theme-button-text-color);
-         border: none;
-         font-size: 18px;
-      }
 
-      .button:not(:last-child){
-         margin-bottom: 20px
-      }
 
-      #usercard{
-         text-align: center;
-      }
-   </style>
+        #type-publication {
+            z-index: 10;
+        }
+
+        #-level {
+            display: none;
+
+            z-index: 9;
+        }
+
+        .text-block {
+            display: none;
+
+            padding: 10px;
+            -webkit-box-sizing: border-box;
+            -moz-box-sizing: border-box;
+            box-sizing: border-box;
+            height: 50px;
+            width: 100%;
+            justify-content: center;
+            align-items: center;
+
+            border: none;
+            color: var(--tg-theme-text-color);
+            background-color: var(--tg-theme-secondary-bg-color);
+            border-radius: 15px;
+        }
+
+        .text-block:focus-visible {
+            outline: none;
+        }
+
+        .text-block::placeholder {
+            color: var(--tg-theme-hint-color);
+        }
+
+        #format {
+            z-index: 8;
+        }
+
+        #type-employment {
+            display: none;
+
+            z-index: 7;
+        }
+
+        #min-level {
+            display: none;
+
+            z-index: 7;
+        }
+
+        #is-paid,
+        #is-free {
+            display: none;
+
+            z-index: 6;
+        }
+
+        .description {
+            padding: 10px;
+            border: none;
+            outline: none;
+            width: calc(100% - 20px);
+            color: var(--tg-theme-text-color);
+            background-color: var(--tg-theme-secondary-bg-color);
+            border-radius: 15px;
+            resize: vertical;
+        }
+
+        .description::placeholder {
+            color: var(--tg-theme-hint-color);
+        }
+
+        .vacancy-internship #-level,
+        .vacancy-internship .-job-title,
+        .vacancy-internship .-zp,
+        .internship-program .-title,
+        .educational-program .-title,
+        .vacancy-internship #type-employment,
+        .internship-program #type-employment,
+        .educational-program #min-level,
+        .internship-program #is-paid,
+        .educational-program #is-free {
+            display: block;
+        }
+
+        .-company,
+        .-link {
+            display: block;
+        }
+    </style>
+
+    <style class="drop-down-list">
+        .--select {
+            position: relative;
+            z-index: 2;
+            height: 50px;
+            width: 100%;
+        }
+
+        .--element {
+            position: relative;
+
+            display: flex;
+            flex-direction: column;
+            opacity: 0;
+            justify-content: center;
+            align-items: center;
+            width: 100%;
+
+            border: none;
+            background: none;
+            border-radius: 15px;
+            color: var(--tg-theme-text-color);
+
+            backdrop-filter: blur(20px);
+            transition: all 0.3s ease-in;
+        }
+
+        .--element.--active {
+            color: var(--tg-theme-button-text-color);
+            background: var(--tg-theme-button-color);
+            opacity: 1;
+        }
+
+        .--element.--choice {
+            opacity: 1;
+        }
+    </style>
+
 </head>
 
 <body>
-   <div id="usercard"> <!--Карта профиля, человека, который к нам обратился-->
-   </div>
-   <p>Just text</p> <!--Просто текст для проверки-->
-   <a class="link" href="https://mihailgok.ru">Link</a> <!--Просто ссылка для проверки-->
-   <p class="hint">Some little hint</p> <!--Просто текст-подсказка для проверки-->
-   <button id="btn" class="button">Show/Hide Main Button</button> <!--Кнопка, чтобы скрыть / показать основную кнопку-->
-   <button id="btnED" class="button">Enable/Disable Main Button</button> <!--Кнопка, чтобы сделать кнопку активной/неактивной-->
+    <main class="main">
+        <section id='offers' class="vacancy-internship">
+            <div id="type-publication" class="--select">
+                <button class="--element --active" onclick="typePublication.update(this)" value="0">💼
+                    - Вакансия/стажировка</button>
+                <button class="--element" onclick="typePublication.update(this)" value="1">🎟️ - Стажерская
+                    программа</button>
+                <button class="--element" onclick="typePublication.update(this)" value="2">🎓 -
+                    Образовательная
+                    программа</button>
+            </div>
+
+            <div style="height: 5px"></div>
+
+            <div id="-level" class="--select">
+                <button class="--element --active" onclick="level.update(this)" value="-1">Уровень</button>
+                <button class="--element" onclick="level.update(this)" value="0">Assistant</button>
+                <button class="--element" onclick="level.update(this)" value="1">Intern</button>
+                <button class="--element" onclick="level.update(this)" value="2">Junior</button>
+                <button class="--element" onclick="level.update(this)" value="3">Middle</button>
+                <button class="--element" onclick="level.update(this)" value="4">Senior</button>
+                <button class="--element" onclick="level.update(this)" value="5">Lead</button>
+                <button class="--element" onclick="level.update(this)" value="6">Head</button>
+                <button class="--element" onclick="level.update(this)" value="7">Chief</button>
+            </div>
+            <input class="text-block -job-title" type="text" placeholder="Название вакансии">
+            <input class="text-block -title" type="text" placeholder="Название">
+            <input class="text-block -company" type="text" placeholder="Компания">
+            <input class="text-block -link" type="text" placeholder="Ссылка">
+            <div id="format" class="--select">
+                <button class="--element --active" onclick="format.update(this)" value="-1">Формат</button>
+                <button class="--element" onclick="format.update(this)" value="0">Офис или гибрид</button>
+                <button class="--element" onclick="format.update(this)" value="1">Удаленка</button>
+                <button class="--element" onclick="format.update(this)" value="2">Удаленка или
+                    офис</button>
+            </div>
+            <input id='office' class="text-block" type="text" placeholder="Адрес офиса" style="display: block;">
+            <div id="type-employment" class="--select">
+                <button class="--element --active" onclick="typeEmployment.update(this)" value="-1">Тип
+                    занятости</button>
+                <button class="--element" onclick="typeEmployment.update(this)" value="0">фулл-тайм</button>
+                <button class="--element" onclick="typeEmployment.update(this)" value="1">парт-тайм</button>
+                <button class="--element" onclick="typeEmployment.update(this)" value="2">фулл или парт-тайм</button>
+            </div>
+            <div id="min-level" class="--select">
+                <button class="--element --active" onclick="minLevel.update(this)" value="-1">Минимальный
+                    Уровень</button>
+                <button class="--element" onclick="minLevel.update(this)" value="0">Assistant</button>
+                <button class="--element" onclick="minLevel.update(this)" value="1">Intern</button>
+                <button class="--element" onclick="minLevel.update(this)" value="2">Junior</button>
+                <button class="--element" onclick="minLevel.update(this)" value="3">Middle</button>
+                <button class="--element" onclick="minLevel.update(this)" value="4">Senior</button>
+                <button class="--element" onclick="minLevel.update(this)" value="5">Lead</button>
+                <button class="--element" onclick="minLevel.update(this)" value="6">Head</button>
+                <button class="--element" onclick="minLevel.update(this)" value="7">Chief</button>
+            </div>
+            <input class="text-block -zp" type="text" placeholder="ЗП">
+            <div id="is-paid" class="--select">
+                <button class="--element --active" onclick="isPaid.update(this)" value="0">оплачивается</button>
+                <button class="--element" onclick="isPaid.update(this)" value="1">не оплачивается</button>
+            </div>
+            <div id="is-free" class="--select">
+                <button class="--element --active" onclick="isFree.update(this)" value="0">бесплатно</button>
+                <button class="--element" onclick="isFree.update(this)" value="1">платно</button>
+            </div>
+
+            <div style="height: 10px"></div>
+
+            <textarea class="description" placeholder="Описание"></textarea>
+        </section>
+
+    </main>
+
+    <script>
+        let type = document.getElementById('offers');
+        let address = document.getElementById('office');
+
+        class DropDownList {
+            firstDelete = false;
+
+            constructor(selectName) {
+                let select = document.getElementById(selectName);
+
+                this.selectName = selectName;
+                let elements = select.getElementsByClassName('--element');
+                this.heightElement = 50;
+
+
+                let i = 0;
+                for (let element of elements) {
+                    element.classList.remove('--choice');
+                    element.style.height = `${this.heightElement}px`;
+                    element.style.transform = `translateY(-${this.heightElement * i++}px)`;
+                }
+            }
+
+            update(e) {
+                let select = document.getElementById(this.selectName);
+                let elements = select.getElementsByClassName('--element');
+
+                if (elements[0].value == -1) {
+                    elements[0].style.display = 'none';
+                    elements[1].classList.add('--active')
+                    this.firstDelete = true;
+                }
+
+                if (e.classList.contains("--choice") && !e.classList.contains("--active")) {
+                    let elementText = e.innerText;
+                    let elementValue = e.value;
+
+                    e.innerText = elements[+this.firstDelete].innerText;
+                    elements[+this.firstDelete].innerText = elementText;
+
+                    e.value = elements[+this.firstDelete].value;
+                    elements[+this.firstDelete].value = elementValue;
+
+                    if (this.selectName == 'type-publication')
+                        switch (elementValue) {
+                            case '0':
+                                type.removeAttribute('class');
+                                type.classList.add('vacancy-internship');
+
+                                break;
+                            case '1':
+                                type.removeAttribute('class');
+                                type.classList.add('internship-program');
+
+                                break;
+                            case '2':
+                                type.removeAttribute('class');
+                                type.classList.add('educational-program');
+                        }
+
+                    if (this.selectName == 'format')
+                        if (elementValue == '0')
+                            address.style.display = 'block';
+                        else
+                            address.style.display = 'none';
+                }
+                if (e.classList.contains("--choice")) {
+                    let i = 0;
+                    for (let element of elements) {
+                        element.classList.remove('--choice');
+                        element.style.transform = `translateY(-${this.heightElement * i++ - 50 * this.firstDelete}px)`;
+                    }
+                } else {
+                    let i = 0;
+                    for (let element of elements) {
+                        element.classList.add('--choice');
+                        element.style.transform = `translateY(${0}px )`;
+                    }
+                }
+            }
+        }
+
+        let typePublication = new DropDownList('type-publication');
+        let level = new DropDownList('-level');
+        let format = new DropDownList('format');
+        let typeEmployment = new DropDownList('type-employment');
+        let minLevel = new DropDownList('min-level');
+        let isPaid = new DropDownList('is-paid');
+        let isFree = new DropDownList('is-free');
+
+    </script>
+
+    <script>
+        let tg = window.Telegram.WebApp;
+    </script>
 </body>
 
-<script>
-   let tg = window.Telegram.WebApp; //получаем объект webapp телеграма 
-
-   tg.expand(); //расширяем на все окно  
-
-   tg.MainButton.text = "Changed Text"; //изменяем текст кнопки 
-   tg.MainButton.setText("Changed Text1"); //изменяем текст кнопки иначе
-   tg.MainButton.textColor = "#F55353"; //изменяем цвет текста кнопки
-   tg.MainButton.color = "#143F6B"; //изменяем цвет бэкграунда кнопки
-   tg.MainButton.setParams({"color": "#143F6B"}); //так изменяются все параметры
-
-   let btn = document.getElementById("btn"); //получаем кнопку скрыть/показать 
-
-   btn.addEventListener('click', function(){ //вешаем событие на нажатие html-кнопки
-      if (tg.MainButton.isVisible){ //если кнопка показана 
-         tg.MainButton.hide() //скрываем кнопку 
-      }
-      else{ //иначе
-         tg.MainButton.show() //показываем 
-      }
-   });
-
-   let btnED = document.getElementById("btnED"); //получаем кнопку активировать/деактивировать
-   btnED.addEventListener('click', function(){ //вешаем событие на нажатие html-кнопки
-      if (tg.MainButton.isActive){ //если кнопка показана 
-         tg.MainButton.setParams({"color": "#E0FFFF"}); //меняем цвет
-         tg.MainButton.disable() //скрываем кнопку 
-      }
-      else{ //иначе
-         tg.MainButton.setParams({"color": "#143F6B"}); //меняем цвет
-         tg.MainButton.enable() //показываем 
-      }
-   });
-
-   Telegram.WebApp.onEvent('mainButtonClicked', function(){
-      tg.sendData("some string that we need to send"); 
-      //при клике на основную кнопку отправляем данные в строковом виде
-   });
-
-
-   let usercard = document.getElementById("usercard"); //получаем блок usercard 
-
-   let profName = document.createElement('p'); //создаем параграф
-   profName.innerText = `${tg.initDataUnsafe.user.first_name}
-   ${tg.initDataUnsafe.user.last_name}
-   ${tg.initDataUnsafe.user.username} (${tg.initDataUnsafe.user.language_code})`;
-   //выдем имя, "фамилию", через тире username и код языка
-   usercard.appendChild(profName); //добавляем 
-
-   let userid = document.createElement('p'); //создаем еще параграф 
-   userid.innerText = `${tg.initDataUnsafe.user.id}`; //показываем user_id
-   usercard.appendChild(userid); //добавляем
-
-
-   //работает только в attachment menu
-   // let pic = document.createElement('img'); //создаем img
-   // pic.src = tg.initDataUnsafe.user.photo_url; //задаём src 
-   // usercard.appendChild(pic); //добавляем элемент в карточку 
-</script>
 </html>
