--- a/creating-vacancy.html
+++ b/creating-vacancy.html
@@ -204,9 +204,7 @@
             </div>
             <input id='office' class="text-block" type="text" placeholder="Адрес офиса" style="display: block;">
             <div id="type-employment" class="--select">
-                <button class="--element --active" onclick="typeEmployment.update(this)" value="-1">Тип
-                    занятости</button>
-                <button class="--element" onclick="typeEmployment.update(this)" value="0">фулл-тайм</button>
+                <button class="--element --active" onclick="typeEmployment.update(this)" value="0">фулл-тайм</button>
                 <button class="--element" onclick="typeEmployment.update(this)" value="1">парт-тайм</button>
                 <button class="--element" onclick="typeEmployment.update(this)" value="2">фулл или парт-тайм</button>
             </div>
