--- a/creating-vacancy.html
+++ b/creating-vacancy.html
@@ -299,7 +299,7 @@
                         }
 
                     if (this.selectName == 'format')
-                        if (elementValue == '0')
+                        if (elementValue == '0' || elementValue == '2')
                             address.style.display = 'block';
                         else
                             address.style.display = 'none';
